--- a/index.html
+++ b/index.html
@@ -302,6 +302,10 @@
            
        </aside>
      </div>
+
+      <div id="customAlert" class="hidden fixed top-0 left-[38%] text-white bg-black w-[400px] rounded-xl z-50 p-3">
+        
+       </div>
      <script src="./script.js"></script>
 </body>
 </html>
