Add Dom of Clear History

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                <p class="font-bold text-[20px]">Call History</p>
             </div>
             <button class="flex justify-center items-center gap-2 w-[90px] h-10  rounded-xl bg-[#00a63e]">
-            <p class="text-white">Clear</p>
+            <p id="clear" class="text-white">Clear</p>
            </button>
            </div><br>
            <div id="addDiv">
