Challenge Part Done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
            </button>
            <button class="flex justify-center items-center gap-2 w-[90px] h-10  rounded-xl bg-[#00a63e]">
-            <p class="text-white">2 copy</p>
+            <p class="text-white"><span id="current-copy">0</span> copy</p>
            </button>
         </div>
     </nav>
@@ -70,9 +70,9 @@
                     <p class=" p-3">All</p>
                 </div>
                 <div class="div-btn flex justify-between gap-2 mt-4">
-                   <button class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
+                   <button id="copy-btn" class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
                     <i class="fa-regular fa-copy" style="color: #908e8e;"></i>
-                    <p class="text-[#908e8e]">Copy</p>
+                    <p  class="text-[#908e8e]">Copy</p>
                    </button>
                    <button id="call-btn" class="w-1/2 h-8 rounded-sm flex justify-center items-center gap-1 text-white bg-[#00a63e]">
                         <i class="fa-solid fa-phone"></i>
@@ -95,7 +95,7 @@
                     <p class=" p-3">Police</p>
                 </div>
                 <div class="div-btn flex justify-between gap-2 mt-4">
-                   <button class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
+                   <button id="copy-btn" class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
                     <i class="fa-regular fa-copy" style="color: #908e8e;"></i>
                     <p class="text-[#908e8e]">Copy</p>
                    </button>
@@ -120,7 +120,7 @@
                     <p class=" p-3">Fire</p>
                 </div>
                 <div class="div-btn flex justify-between gap-2 mt-4">
-                   <button class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
+                   <button id="copy-btn" class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
                     <i class="fa-regular fa-copy" style="color: #908e8e;"></i>
                     <p class="text-[#908e8e]">Copy</p>
                    </button>
@@ -145,7 +145,7 @@
                     <p class=" p-3">Health</p>
                 </div>
                 <div class="div-btn flex justify-between gap-2 mt-4">
-                   <button class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
+                   <button id="copy-btn" class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
                     <i class="fa-regular fa-copy" style="color: #908e8e;"></i>
                     <p class="text-[#908e8e]">Copy</p>
                    </button>
@@ -170,7 +170,7 @@
                     <p class=" p-3">Help</p>
                 </div>
                 <div class="div-btn flex justify-between gap-2 mt-4">
-                   <button class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
+                   <button id="copy-btn" class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
                     <i class="fa-regular fa-copy" style="color: #908e8e;"></i>
                     <p class="text-[#908e8e]">Copy</p>
                    </button>
@@ -195,7 +195,7 @@
                     <p class=" p-3">Govt.</p>
                 </div>
                 <div class="div-btn flex justify-between gap-2 mt-4">
-                   <button class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
+                   <button id="copy-btn" class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
                     <i class="fa-regular fa-copy" style="color: #908e8e;"></i>
                     <p class="text-[#908e8e]">Copy</p>
                    </button>
@@ -220,7 +220,7 @@
                     <p class=" p-3">Electricity</p>
                 </div>
                 <div class="div-btn flex justify-between gap-2 mt-4">
-                   <button  class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
+                   <button id="copy-btn" class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
                     <i class="fa-regular fa-copy" style="color: #908e8e;"></i>
                     <p class="text-[#908e8e]">Copy</p>
                    </button>
@@ -245,7 +245,7 @@
                     <p class=" p-3">NGO</p>
                 </div>
                 <div class="div-btn flex justify-between gap-2 mt-4">
-                   <button class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
+                   <button id="copy-btn" class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
                     <i class="fa-regular fa-copy" style="color: #908e8e;"></i>
                     <p class="text-[#908e8e]">Copy</p>
                    </button>
@@ -270,7 +270,7 @@
                     <p class=" p-3">Travel</p>
                 </div>
                 <div class="div-btn flex justify-between gap-2 mt-4">
-                   <button class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
+                   <button id="copy-btn" class="w-1/2 h-8 border border-[var(--Stroke,rgba(212,214,213,1))] rounded-sm flex justify-center gap-1 items-center">
                     <i class="fa-regular fa-copy" style="color: #908e8e;"></i>
                     <p class="text-[#908e8e]">Copy</p>
                    </button>
