Alert effect add

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 </head>
 <body class="bg-[#f5fff6]">
-    <nav class="flex justify-between flex-col md:flex-row p-9  md:h-28 bg-white">
+    <nav class="w-full z-10 flex justify-between flex-col md:flex-row p-9  md:h-28 bg-white">
         <div class="nav-left mx-auto md:mx-0 md:w-1/2">
           <div class="flex gap-2">
              <figure><img class="h-12" src="./assets/logo.png" alt=""></figure>
@@ -42,7 +42,7 @@
     </nav>
 
     <!-- Banner Section  -->
-     <div class="banner flex justify-center text-center  w-full bg-[linear-gradient(90deg,rgba(1,49,35,1),rgba(0,103,71,1)_50%,rgba(1,50,35,1)_100%)] md:mt-0">
+     <div class="banner  flex justify-center text-center  w-full bg-[linear-gradient(90deg,rgba(1,49,35,1),rgba(0,103,71,1)_50%,rgba(1,50,35,1)_100%)] md:mt-0">
         <div class="banner-description">
             <figure><img class="w-20 h-24 mx-auto pt-3" src="./assets/logo-dark.png" alt=""></figure><br>
             <h2 class="text-white text-4xl">Emergency Service Directory</h2> <br>
@@ -306,6 +306,8 @@
       <div id="customAlert" class="hidden fixed top-0 left-10 md:left-[38%] text-white bg-black md:w-[400px] rounded-b-xl z-10 p-3">
         
        </div>
+       <div id="effect" class="effect hidden w-[100%] h-[100%] fixed left-0 top-0 bg-[#000000cc]">
+        </div>
      <script src="./script.js"></script>
 </body>
 </html>
